Added a file and made some insertions

--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Mulish&display=swap');
 body {
-    background-image: url(./Assets/Images/Rate\ Exchange.webp);
+    background-image: url(./Assets/Images/ade.jpg);
     background-size: cover;
 }
 
@@ -10,13 +10,13 @@ main {
 }
 
 h1 {
-    color: #FF8800;
+    color: white;
     text-transform: uppercase;
     font-size: 4rem;
 }
 
 .div1 {
-   color: #FF8800;
+   color: white;
    font-size: 1.5rem;
    border: 2px solid skyblue;
    margin: 4vh 20vw;
@@ -33,10 +33,10 @@ h1 {
 }
 
 button {
-    border: 0px solid #FF8800;
+    border: 0px solid white;
     border-radius: 5px;
-    background-color: #FF8800;
-    color: white;
+    background-color: white;
+    color: rgb(9, 179, 247);
     width: 30%;
     height: 30px;
     cursor: pointer;
@@ -50,16 +50,16 @@ button {
 }
 
 .div3 {
-    background-color: skyblue;
-    border: 1px solid #FF8800;
+    background-color: rgb(9, 179, 247);
+    border: 1px solid white;
     margin-top: 20px;
     font-size: 1.2rem;
     border-radius: 10px;
 }
 
 .div4 {
-    background-color: skyblue;
-    border: 1px solid #FF8800;
+    background-color: rgb(9, 179, 247);
+    border: 1px solid white;
     margin-top: 20px;
     font-size: 1.2rem;
     border-radius: 10px;
